# crossfit_activity

./: README.md  pyproject.toml
cf_activity/: alembic.ini  main.py
cf_activity/alembic/: env.py
cf_activity/alembic/versions/: 2023_04_23_0142-aa8451b4f950_.py  2023_04_30_0049-3ac070e5327e_.py  2023_05_16_2334-90581cf80d33_orm_models_columns_renaming.py  2023_05_17_0104-e657aa2246c7_test_orm_changes.py  2023_05_19_0052-1284289bf083_datasets_data.py  2023_10_15_1749-7e176e138fc3_all_tables_renamed.py
cf_activity/data/: __init__.py  crud_base.py  router.py  settings.py
cf_activity/data/datasets/: crud.py  models.py  router.py  schemas.py  utils.py
cf_activity/data/user/: models.py
cf_activity/data/workout/: crud.py  models.py  router.py  schemas.py
db_arch/: README.md  db_schema.drawio
