[tool.poetry]
name = "crossfit-activity"
version = "0.1.0"
description = ""
authors = ["Gumerov Artur <2diver7@gmail.com>"]
readme = "README.md"
packages = [{include = "crossfit_activity"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.9"
python-slugify = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
