[tool.poetry]
name = "crossfit-activity"
version = "0.1.0"
description = ""
authors = ["Gumerov Artur <2diver7@gmail.com>"]
readme = "README.md"
packages = [{include = "crossfit_activity"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.9"
python-slugify = "^8.0.1"
alembic = "^1.10.3"
psycopg = "^3.1.8"
fastapi = "^0.95.1"
cmake = "^3.26.3"
uvicorn = "^0.22.0"
pydantic = { path = "/Users/a.gumerov/Downloads/pydantic-1.10.7-cp311-cp311-macosx_11_0_arm64.whl" }
black = { path = "/Users/a.gumerov/Downloads/black-23.3.0-cp311-cp311-macosx_10_16_arm64.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
